--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Rubik:ital,wght@0,300;0,400;0,700;1,600&family=Ubuntu&display=swap');
 
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 html,
 body {
     font-family: 'Rubik', sans-serif;
+    background: #000;
+    color: #ffff;
+    line-height: 1.7;
+    overflow-x:hidden;
+}
+
+a{
+    color:#ffff;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #ccc;
+}
+
+ul{
+    list-style: none;
+}
+
+img {
+    width: 100%;
+}
+.header {
+    height: 530px;
+    background: url(/img/header.jpg) no-repeat center center / cover;
+}
+
+.header nav {
+    display: flex;
+    justify-content: flex-end;
+    padding: 20px 40px;
+}
+
+.header nav .login-btn {
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: #ffff;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.header .logo {
+    width: 270px;
+    margin: 20px 0;
 }
