--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,18 @@ img {
     color: #ffff;
     font-weight: bold;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 
 .header .logo {
     width: 270px;
     margin: 20px 0;
+}
+
+.header .header-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 30px;
 }
