--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,13 @@ img {
     width: 100%;
 }
 
+h4 {
+    color: #00ed82;
+    font-size: 13px;
+    text-transform: uppercase;
+
+}
+
 .btn {
     display: inline-block;
     background: #ffff;
@@ -49,6 +56,12 @@ img {
 
 .btn-cta:hover{
     opacity: 0.8;
+}
+
+.legal-text {
+    font-size: 10px;
+    color: #ccc;
+    margin-top: 20px;
 }
 
 /*Header */
@@ -93,5 +106,15 @@ img {
 .header .header-text-2 {
     font-size: 18px;
     margin: 25px 0;
+}
+
+/* Media Queries */
+@media (max-width:768px) {
+    .header .logo
+    width: 200px;
+    .header .header-content {
+        text-align: center;
+        padding: 0 20px;
+    }
 }
 
