Added sub-link styling

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ img {
     width: 100%;
 }
 
+h3 {
+    font-size: 26px;
+    font-weight: 300;
+}
+
 h4 {
     color: #00ed82;
     font-size: 13px;
@@ -64,6 +69,12 @@ h4 {
     margin-top: 20px;
 }
 
+
+.sub-link {
+    display: block;
+    color: #ccc;
+    margin-top: 20px;
+}
 /*Header */
 .header {
     height: 530px;
