--- a/css/style.css
+++ b/css/style.css
@@ -136,12 +136,14 @@ h4 {
 }
 
 /* Media Queries */
-@media (max-width:768px) {
-    .header .logo
-    width: 200px;
-    .header .header-content {
-        text-align: center;
-        padding: 0 20px;
+@media (max-width: 1100px) {
+    .categories .covers {
+      grid-template-columns: 1fr 1fr;
     }
-}
+  }
+
+  @media (max-width: 768px) {
+    .header .logo {
+      width: 200px;
+    }
 
