--- a/css/style.css
+++ b/css/style.css
@@ -141,9 +141,15 @@ h4 {
       grid-template-columns: 1fr 1fr;
     }
   }
-
+  
   @media (max-width: 768px) {
     .header .logo {
       width: 200px;
     }
+  
+    .header .header-content {
+      text-align: center;
+      padding: 0 20px;
+    }
 
+  }
