--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ h4 {
 /*Header */
 .header {
     height: 530px;
-    background: url(/img/header.jpg) no-repeat center center / cover;
+    background: url(../img/header.jpg) no-repeat center center / cover;
 }
 
 .header nav {
