--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,18 @@ h4 {
     opacity: 0.8;
 }
 
+.btn-outline {
+    background: none;
+    color: #fff;
+    border: 2px solid #ffff;
+}
+
+.btn-outline:hover {
+    color: #fff;
+    border-color: #ccc;
+}
+
+
 .legal-text {
     font-size: 10px;
     color: #ccc;
@@ -73,7 +85,9 @@ h4 {
 .sub-link {
     display: block;
     color: #ccc;
-    margin-top: 20px;
+    font-size: 12px;
+    margin-top: 5px;
+    text-decoration: underline;
 }
 /*Header */
 .header {
@@ -135,6 +149,15 @@ h4 {
 
 }
 
+.sub-header > div:last-of-type {
+    justify-self: end;
+    align-self: end;
+  }
+
+  .sub-header > div:last-of-type .sub-link {
+    text-align: center;
+  }
+  
 /* Media Queries */
 @media (max-width: 1100px) {
     .categories .covers {
