--- a/css/style.css
+++ b/css/style.css
@@ -171,4 +171,11 @@ h4 {
       padding: 0 20px;
     }
 
-  
+  .sub-header {
+    grid-template-columns: 1fr;
+  }
+
+  .sub-header img {
+    width: 250px;
+    margin: auto;
+  }
