--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,17 @@ h4 {
     margin-top: 5px;
     text-decoration: underline;
 }
+
+.text-xl {
+    font-size: 70px;
+    font-weight: bold;
+}
+
+.sub-text {
+    max-width: 850px;
+    margin-bottom: 24px;
+    font-size: 24px;
+}
 /*Header */
 .header {
     height: 530px;
@@ -157,6 +168,18 @@ h4 {
   .sub-header > div:last-of-type .sub-link {
     text-align: center;
   }
+/* Categories */
+
+.categories {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.categories .covers {
+
+}
+
 
 /* Media Queries */
 @media (max-width: 1100px) {
