--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,12 @@ h4 {
 
 }
 
+.categories .covers > div {
+    height: 500px;
+    width: 300px;
+    position: relative;
+}
+
 
 /* Media Queries */
 @media (max-width: 1100px) {
