Gradient added to header. Edited cover-grad

--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,21 @@ h4 {
     margin: 25px 0;
 }
 
+.header::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 180px;
+    z-index: 1;background: linear-gradient(
+        180deg,
+        rgba(0, 0, 0, 0.76) 15.54%,
+        rgba(0, 0, 0, 0.192) 60.23%,
+        rgba(0, 0, 0, 8e-5) 100%
+      );
+}
+
 /*Sub Header */
 .sub-header {
     display: grid;
@@ -206,16 +221,23 @@ h4 {
     linear-gradient(24.5deg, rgba(0, 0, 0, 0.2) 4.71%, rgba(0, 0, 0, 0) 71.49%);
 }
 
-.cover-1 {
+.categories .cover-text {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    text-align: left;
+}
+
+.categories .cover-1 {
     background: url('../img/cover-1.jpg') no-repeat center center / cover;
 }
-.cover-2 {
+.categories .cover-2 {
     background: url('../img/cover-2.jpg') no-repeat center center / cover;
 }
-.cover-3 {
+.categories .cover-3 {
     background: url('../img/cover-3.jpg') no-repeat center center / cover;
 }
-.cover-4 {
+.categories .cover-4 {
     background: url('../img/cover-4.jpg') no-repeat center center / cover;
 }
 
