--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,23 @@ h4 {
 .categories .cover-4 {
     background: url('../img/cover-4.jpg') no-repeat center center / cover;
 }
+/*Live */
 
+.live {
+    background: #151516;
+    padding: 40px;
+}
+
+.live-border {
+    border: 4px solid #1ce783;
+    border-radius: 16px;
+    padding: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
 
 /* Media Queries */
 @media (max-width:1100px){
