--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,11 @@ h4 {
     text-align: center;
 }
 
+.live a {
+    text-transform: uppercase;
+    font-size: 18px;
+}
+
 /* Media Queries */
 @media (max-width:1100px){
     .categories .covers {
@@ -272,7 +277,6 @@ h4 {
         width: 200px;
     }
 }
-  
   
     .header .header-content {
       text-align: center;
@@ -304,4 +308,8 @@ h4 {
 
   .categories .cover{
     grid-template-columns: 1fr;
+  }
+
+  .live-border {
+    padding: 30px 10px;
   }
