Centered live-sports section

--- a/css/style.css
+++ b/css/style.css
@@ -349,3 +349,14 @@ h4 {
   .live-border {
     padding: 30px 10px;
   }
+
+  .live-sports {
+    background: url('../img/live-sports-small.jpg') no-repeat center center /
+      cover;
+  }
+
+  .live-sports-content {
+    top: 30px;
+    left: 30px;
+    margin-top: 60px;
+  }
