--- a/css/style.css
+++ b/css/style.css
@@ -300,63 +300,119 @@ h4 {
     width: 40px;
 }
 
+/* Footer */
+.footer {
+    background: #ebedf2;
+    color: #333;
+}
 
+.footer a {
+    color: #333;
+}
+
+.footer-container {
+    max-width: 1100px;
+    margin: auto;
+    padding: 40px;
+  }
+  
+  .footer-lists {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .footer-lists .list-head {
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 5px;
+  }
+
+  .divider {
+    width: 100%;
+    height: 3px;
+    border-top: 1px #ccc solid;
+    margin: 30px 0;
+  }
+
+  .social-icons img {
+    width: 25px;
+    height: 25px;
+    margin-right: 25px;
+  }
 /* Media Queries */
-@media (max-width:1100px){
+@media (max-width: 1100px) {
     .categories .covers {
-        grid-template-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
     }
-}
-
-@media (max-width: 768px){
+  }
+  
+  @media (max-width: 768px) {
     .header .logo {
-        width: 200px;
+      width: 200px;
     }
-}
   
     .header .header-content {
       text-align: center;
       padding: 0 20px;
     }
-
-
-
-  .sub-header {
-    grid-template-columns: 1fr;
-    text-align: center;
-    gap: 20px;
-  }
-
-  .sub-header img {
-    width: 250px;
-    margin: auto;
-  }
-
-  .sub-header > div:last-of-type {
-    justify-self: center;
-    align-self: center;
-  }
-
-  .text-xl{
-    line-height: 1.3;
-    font-size: 40px;
-  }
-
-  .categories .cover{
-    grid-template-columns: 1fr;
-  }
-
-  .live-border {
-    padding: 30px 10px;
-  }
-
-  .live-sports {
-    background: url('../img/live-sports-small.jpg') no-repeat center center /
-      cover;
-  }
-
-  .live-sports-content {
-    top: 30px;
-    left: 30px;
-    margin-top: 60px;
+  
+    .header .header-text-1 {
+      margin-bottom: 40px;
+    }
+  
+    .header .header-text-2 {
+      display: none;
+    }
+  
+    .sub-header {
+      grid-template-columns: 1fr;
+      text-align: center;
+      gap: 20px;
+    }
+  
+    .sub-header img {
+      width: 250px;
+      margin: auto;
+    }
+  
+    .sub-header > div:last-of-type {
+      justify-self: center;
+      align-self: center;
+    }
+  
+    .text-xl {
+      line-height: 1.3;
+      font-size: 40px;
+    }
+  
+    .sub-text {
+      font-size: 20px;
+    }
+  
+    .categories .covers {
+      grid-template-columns: 1fr;
+    }
+  
+    .live-border {
+      padding: 30px 10px;
+    }
+  
+    .live-sports {
+      background: url('../img/live-sports-small.jpg') no-repeat center center /
+        cover;
+    }
+  
+    .live-sports-content {
+      top: 30px;
+      left: 30px;
+      margin-top: 60px;
+    }
+  
+    .footer-lists {
+      flex-direction: column;
+    }
+  
+    .modal .modal-box {
+      width: 350px;
+    }
   }
