--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,11 @@ h4 {
     border-color: #ccc;
 }
 
+.btn-dark {
+    background: #000;
+    color: #fff;
+}
+
 
 .legal-text {
     font-size: 10px;
@@ -339,6 +344,64 @@ h4 {
     height: 25px;
     margin-right: 25px;
   }
+
+  /* Modal */
+  .modal {
+   /* display: none; */
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
+  }
+
+
+  .modal-box {
+    margin: 10% auto;
+    width: 400px;
+    background: #fff;
+    color: #333;
+    position: relative;
+  }
+
+  .modal-body {
+    padding: 50px;
+  }
+
+    .modal-body h3 {
+    font-weight: bold;
+  }
+
+  .modal-body .btn {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .modal .closed {
+    cursor: pointer;
+    height: 23px;
+    width: 23px;
+    position: absolute;
+    top: 20px;
+    right: 20px;    
+  }
+
+  .modal-footer {
+    background: #f7f7f9;
+    color: #333;    
+    padding: 20px 0;
+    border-top: #eee 1px solid;
+    text-align: center;
+  }
+
+
+  .modal .modal-footer a {
+    color: steelblue;
+  }
+
+
 /* Media Queries */
 @media (max-width: 1100px) {
     .categories .covers {
