--- a/css/style.css
+++ b/css/style.css
@@ -401,6 +401,23 @@ h4 {
     color: steelblue;
   }
 
+    /* Form */
+    .form-control {
+        margin: 20px 0;
+      }
+      
+      .form-control label {
+        display: block;
+        text-transform: uppercase;
+      }
+      
+      .form-control input {
+        width: 100%;
+        border: 2px #ccc solid;
+        border-radius: 5px;
+        height: 50px;
+        padding: 5px;
+      }
 
 /* Media Queries */
 @media (max-width: 1100px) {
